test/fixtures/bpmn/error/duplicate-ids.bpmn
<?xml version="1.0" encoding="UTF-8"?>
<bpmn2:definitions
  xmlns:bpmn2="http://www.omg.org/spec/BPMN/20100524/MODEL"
  id="test"
  targetNamespace="http://bpmn.io/schema/bpmn">

  <bpmn2:process id="test" />
</bpmn2:definitions>